SASS files and about.index updated

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <div class="header__right">
             <ul class="header__right--navbar">
-                <li><a href="#"  class="header__right--navbar-home">Home</a></li>
+                <li><a href="#" class="header__right--navbar-home">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="#">Services</a></li>
             </ul>
         </div>
     </header>
@@ -23,35 +23,37 @@
         <h1 class="section__hero--head">Professional Web Design</h1>
         <p class="section__hero--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
     </section>
-    <section>
-        <div>
+    <section class="section__newsletter">
+        <div class="section__newsletter--subscribe">
             <p>Subscribe To Our Newsletter</p>
         </div>
-        <div>
-            <input type="email" name="email" id="email" placeholder="Enter Email...">
-            <input type="button" value="Subscribe">
+        <div class="section__newsletter--email">
+            <input type="email" name="email" class="section__newsletter--email-input" placeholder="Enter Email...">
+            <input type="button" value="Subscribe" class="section__newsletter--email-button">
         </div>
     </section>
-    <section>
-        <div>
-            <img src="./images/logo_html.png" alt="HTML Logo">
+    <section class="section__logo">
+        <div class="section__logo--html">
+            <img src="./images/logo_html.png" alt="HTML Logo" class="section__logo--html-img">
             <h3>HTML5 Markup</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
-        <div>
-            <img src="./images/logo_css.png" alt="CSS Logo">
+        <div class="section__logo--css">
+            <img src="./images/logo_css.png" alt="CSS Logo" class="section__logo--css-img">
             <h3>CSS3 Styling</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
-        <div>
-            <img src="./images/logo_brush.png" alt="Brush Logo">
+        <div class="section__logo--graphic">
+            <img src="./images/logo_brush.png" alt="Brush Logo" class="section__logo--graphic-img">
             <h3>Graphic Design</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
         </div>
     </section>
-    <footer>
-        <p>Clarusway Web Design, Copyright © 2020</p>
-        <img src="" alt="Clarusway-Logo">
+    <footer class="footer">
+        <div class="footer__container">
+            <p class="footer__p">Clarusway Web Design, Copyright © 2020</p>
+            <img src="./images/clarusway_logo.png" alt="Clarusway-Logo" class="footer__img">
+        </div>
     </footer>
 </body>
 </html>
